--- a/www/index.html
+++ b/www/index.html
@@ -13,6 +13,23 @@
 
 </head>
 <body>
-  This is a template for Onsen UI app.
+  <div class="container">
+    <div class="row">
+      <div class="col-sm">
+        <div class="form-group">
+          <label>Valor 1</label>
+          <input type="number" class="form-control">
+        </div>
+      </div>
+    </div>
+     <div class="row">
+      <div class="col-sm">
+        <div class="form-group">
+          <label>Valor 2</label>
+          <input type="number" class="form-control">
+        </div>
+      </div>
+    </div>
+  </div>
 </body>
 </html>
